// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditsSettings component renders only the menu if page unknown 1`] = `
<div
  className="settings"
>
  <div
    className="settings-menu"
  >
    <ul>
      <li
        className="General"
        key="General"
        onClick={[Function]}
      >
        General
      </li>
      <li
        className="Electron"
        key="Electron"
        onClick={[Function]}
      >
        Electron
      </li>
      <li
        className="Credits"
        key="Credits"
        onClick={[Function]}
      >
        Credits
      </li>
    </ul>
  </div>
  <div
    className="settings-content"
  >
    <div
      className="settings-close"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f057",
              "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
            ],
            "iconName": "times-circle",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </div>
  </div>
</div>
`;

exports[`CreditsSettings component renders the Electron page by default 1`] = `
<div
  className="settings"
>
  <div
    className="settings-menu"
  >
    <ul>
      <li
        className="selected General"
        key="General"
        onClick={[Function]}
      >
        General
      </li>
      <li
        className="Electron"
        key="Electron"
        onClick={[Function]}
      >
        Electron
      </li>
      <li
        className="Credits"
        key="Credits"
        onClick={[Function]}
      >
        Credits
      </li>
    </ul>
  </div>
  <div
    className="settings-content"
  >
    <div
      className="settings-close"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f057",
              "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
            ],
            "iconName": "times-circle",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </div>
    <settings-general
      appState={
        Object {
          "isSettingsShowing": true,
        }
      }
    />
  </div>
</div>
`;

exports[`CreditsSettings component renders the General page after a click 1`] = `
<div
  className="settings"
>
  <div
    className="settings-menu"
  >
    <ul>
      <li
        className="selected General"
        key="General"
        onClick={[Function]}
      >
        General
      </li>
      <li
        className="Electron"
        key="Electron"
        onClick={[Function]}
      >
        Electron
      </li>
      <li
        className="Credits"
        key="Credits"
        onClick={[Function]}
      >
        Credits
      </li>
    </ul>
  </div>
  <div
    className="settings-content"
  >
    <div
      className="settings-close"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f057",
              "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
            ],
            "iconName": "times-circle",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </div>
    <settings-general
      appState={
        Object {
          "isSettingsShowing": true,
        }
      }
    />
  </div>
</div>
`;

exports[`CreditsSettings component renders the General page after a click 2`] = `
<div
  className="settings"
>
  <div
    className="settings-menu"
  >
    <ul>
      <li
        className="General"
        key="General"
        onClick={[Function]}
      >
        General
      </li>
      <li
        className="Electron"
        key="Electron"
        onClick={[Function]}
      >
        Electron
      </li>
      <li
        className="selected Credits"
        key="Credits"
        onClick={[Function]}
      >
        Credits
      </li>
    </ul>
  </div>
  <div
    className="settings-content"
  >
    <div
      className="settings-close"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f057",
              "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
            ],
            "iconName": "times-circle",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </div>
    <settings-credits
      appState={
        Object {
          "isSettingsShowing": true,
        }
      }
    />
  </div>
</div>
`;
